--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
   width: 1200px;
   background: white;
   margin: 0 auto;
+  font-size: 16px;
+  line-height: 22px;
+  color: #283136;
+  border: 1px solid black;
 }
 
 .container {
@@ -16,6 +20,43 @@ body {
 }
 header {
   background: #eeeeee;
+  height: 435px;
+}
+h2 {
+  font-size: 36px;
+  line-height: 36px;
+  color: #000;
+}
+nav li {
+  display: inline-block;
+}
+.slide-left {
+  float: left;
+}
+.slide-right {
+  float: right;
+}
+.slider-1, .slider-2, .slider-3 {
+  display: none;
+}
+.active {
+  display: block;
+}
+
+.btn {
+  display: block;
+  border-radius: 3px;
+  height: 38px;
+  line-height: 38px;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  background: #fb565a;
+  font-size: 12px;
+}
+.btn-header {
+  width: 240px;
 }
 .clients li {
   display: inline-block;
@@ -33,10 +74,22 @@ header {
 }
 figure {
   position: relative;
+  left: 0px;
+  margin: 0px;
 }
 .marker {
   position: absolute;
   left: 840px;
   top: 110px;
 }
-
+form {
+  width: 300px;
+}
+input[type="text"] {
+  width: 78px;
+  height: 35px;
+  line-height: 35px;
+  text-align: center;
+  background-color: #f1f1f1;
+  border: none;
+}
