--- a/css/style.css
+++ b/css/style.css
@@ -87,15 +87,12 @@ nav a:active {
   background: #eeeeee;
   min-height: 435px;
 }
-.swith {
-  position: absolute;
-  left: 400px;
-  top: 250px;
-}
+
 h2 {
   font-size: 36px;
   line-height: 36px;
   color: #000;
+  font-weight: normal;
 }
 .studio li::before {
   display: inline-block;
@@ -116,6 +113,7 @@ h2 {
 .slider-3 {
   
 }
+/* кнопки */
 .btn {
   display: block;
   border-radius: 3px;
@@ -155,12 +153,32 @@ h2 {
 .btn-mini {
   width: 140px;
 }
+.btn-red:hover {
+  background: #d6494d;
+}
+.btn-red:active {
+  background: #b63538;
+}
 .btn-green {
   background: #00ca74;
+}
+.btn-green:hover {
+  background: #01a25e;
+}
+.btn-green:active {
+  background: #009053;
 }
 .btn-yellow {
   background: #efc84a;
 }
+.btn-yellow:hover {
+  background: #d6ae2c;
+}
+.btn-yellow:active {
+  background: #c09b24;
+}
+/* -----------------*/
+
 li {
   list-style-type: none;
   
@@ -196,6 +214,15 @@ li:last-child {
 .clients .barbershop:hover {
   background: url("../img/barbershop-hover.png") no-repeat;
 }
+.clients .glukhanko:active {
+  background: url("../img/glukhanko-active.png") no-repeat;
+}
+.clients .htmlacademy:active {
+  background: url("../img/htmlacademy-active.png") no-repeat;
+}
+.clients .barbershop:active {
+  background: url("../img/barbershop-active.png") no-repeat;
+}
 .map {
   margin: 0 auto;
 }
@@ -216,78 +243,133 @@ input[type="text"] {
   clear: both;
 }
 
-
-
-.swith label {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  border: 4px solid white;
-  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.8);
-  border-radius: 50%;
-  margin: 0 3px;
-  cursor: pointer;
-}
-
-#btn-1:checked ~ .swith label[for="btn-1"] {
-  background: #666666;
-}
-#btn-2:checked ~  .swith label[for="btn-2"] {
-  background: #666666;
-}
-#btn-3:checked ~ .swith label[for="btn-3"] {
-  background: #666666;
-}
-#btn-1:checked ~ .slider-inner .sliders {
-  transform: translate(0);
-}
-#btn-2:checked ~ .slider-inner .sliders {
-  transform: translate(-880px);
-}
-#btn-3:checked ~ .slider-inner .sliders {
-  transform: translate(-1760px);
-}
-.left-slide {
-  display: inline-block;
-  
-}
+/* слайдер */
 
 .slider {
-  display: inline-block;
-  width: 877px;
-}
+  position: relative;
 
-.right-slide {
-  display: inline-block;
-  
-}
-
-.sliders {
-  width: 300%;
-  transition: transform 0.8s ease;
-}
-
-.slider-inner {
+  width: 880px;
+  min-height: 310px;
+  margin: 0 auto;
   overflow: hidden;
 }
 
-.slider-slider input[type="radio"] {
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 310px;
+
+  background-repeat: no-repeat;
+  background-position: 100% 10px;
+
+  -webkit-transition: left 0.3s ease;
+     -moz-transition: left 0.3s ease;
+          transition: left 0.3s ease;
+}
+
+.slider input[type="radio"] {
   display: none;
 }
 
-.slider-slider {
-  position: relative;
+.slider-controls {
+  position: absolute;
+  bottom: 90px;
+  left: 50%;
+  z-index: 10;
+
+  width: 200px;
+  margin-left: -100px;
+
+  text-align: center;
 }
 
-label {
-  
+.slider-controls label {
+  display: inline-block;
+  width: 4px;
+  height: 4px;
+  margin: 0 3px;
+
+  vertical-align: top;
+
+  background: #ffffff;
+  border: 3px solid white;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-.swith {
- 
-  top: 50px;
-  left: 0px;
+.slide-text {
+  width: 500px;
+  padding: 20px 0;
 }
+
+.slide-title {
+  font-weight: 500;
+  font-size: 36px;
+}
+
+.slide p {
+  font-weight: 500;
+  line-height: 22px;
+  color: #283136;
+}
+
+
+
+.slide:nth-child(1) {
+  background-image: url("../img/slider-1.png");
+}
+
+.slide:nth-child(2) {
+  background-image: url("../img/slider-2.png");
+}
+
+.slide:nth-child(3) {
+  background-image: url("../img/slider-3.png");
+}
+
+#btn-1:checked ~ .slides .slide:nth-child(1) {
+  left: 0;
+}
+
+#btn-1:checked ~ .slides .slide:nth-child(2),
+#btn-1:checked ~ .slides .slide:nth-child(3) {
+  left: 880px;
+}
+
+#btn-2:checked ~ .slides .slide:nth-child(1) {
+  left: -880px;
+}
+
+#btn-2:checked ~ .slides .slide:nth-child(2) {
+  left: 0;
+}
+
+#btn-2:checked ~ .slides .slide:nth-child(3) {
+  left: -880px;
+}
+
+#btn-3:checked ~ .slides .slide:nth-child(1) {
+  left: -880px;
+}
+
+#btn-3:checked ~ .slides .slide:nth-child(2) {
+  left: -880px;
+}
+
+#btn-3:checked ~ .slides .slide:nth-child(3) {
+  left: 0;
+}
+
+#btn-1:checked ~ .slider-controls label[for="btn-1"],
+#btn-2:checked ~ .slider-controls label[for="btn-2"],
+#btn-3:checked ~ .slider-controls label[for="btn-3"] {
+  background: #c1c1c1;
+}
+/* -------------------*/
+
 
 .contact {
   background: url(../img/map.png) no-repeat;
@@ -338,6 +420,9 @@ nav li {
   margin-top: 55px;
   margin-right: 40px;
 }
+nav li:nth-child(4) {
+  margin-right: 65px;
+}
 
 .logo {
   margin-top: 20px;
@@ -382,4 +467,153 @@ footer {
   display: inline-block;
   line-height: 216px;
   
+}
+footer h2 {
+  margin-top: 55px;
+  margin-bottom: 0;
+}
+
+/* модальное окно */
+.modal {
+  display: none;
+  width: 630px;
+  max-width: 100%;
+  height: 420px;
+  max-height: 100%;
+  position: fixed;
+  z-index: 100;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  box-shadow: 0 20px 50px 0 black;
+  box-shadow: 
+}
+.modal-container {
+  display: block;
+  width: 460px;
+  margin: 0 auto;
+  padding-top: 33px;
+}
+.modal label, .modal input, .modal textarea {
+  display: block;
+  
+}
+.modal input[type="text"] {
+  margin: 0;
+  width: 215px;
+  height: 35px;
+  border: 2px solid #d7dcde;
+  border-radius: 2px;
+  background: none;
+  font-size: 12px;
+  line-height: 16px;
+  text-transform: uppercase;
+}
+.modal input[type="text"]:hover {
+  border-color: #a2a9ac;
+}
+.modal input::-webkit-input-placeholder {
+  color: #000;
+}
+.modal input::-moz-placeholder {
+  color: #000;
+}
+.modal textarea::-webkit-input-placeholder {
+  color: #000;
+}
+.modal textarea::-moz-placeholder {
+  color: #000;
+}
+.modal label {
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: normal;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+.modal form {
+  width: 100%;
+}
+.modal textarea {
+  width: 430px;
+  height: 82px;
+  font-size: 12px;
+  line-height: 16px;
+  text-transform: uppercase; 
+  padding: 14px;
+  margin-bottom: 48px;
+  border: 2px solid #d7dcde;
+  border-radius: 2px;
+  background: none;
+}
+.modal textarea:hover {
+  border-color: #a2a9ac;
+}
+.modal .btn {
+  width: 100%;
+}
+.modal-close {
+  margin: 0;
+  padding: 0;
+  display:block;
+  position: absolute;
+  right: 5px;
+  top: 0px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #fb565a;
+  box-shadow: 0 0 0 0 #000;
+  cursor: pointer;
+}
+.modal-close::before {
+  content: "";
+  position: absolute;
+  top: 18px;
+  left: 7px;
+  display: block;
+  width: 25px;
+  height: 4px;
+  background: #fff;
+  text-align: center;
+  transform: rotate(45deg);
+}
+.modal-close::after {
+  content: "";
+  position: absolute;
+  top: 18px;
+  left: 7px;
+  display: block;
+  width: 25px;
+  height: 4px;
+  background: #fff;
+  text-align: center;
+  
+  transform: rotate(-45deg);
+}
+.modal-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 50;
+  background: rgba(0, 0, 0, 0.5)
+}
+#open:checked ~ .modal {
+  display: block;
+}
+#close:cheked ~ .modal {
+  display: none;
+}
+#open:checked ~ .modal-overlay {
+  display: block;
+}
+#close:cheked ~ .modal-overlay {
+  display: none;
+}
+input[name="modal"] {
+  display:none;
 }
