--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   font-size: 16px;
   line-height: 22px;
   color: #283136;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto','Arial', sans-serif;
 }
 
 @font-face {
@@ -56,12 +56,24 @@ b {
   display: block;
   font-size: 18px;
   line-height: 30px;
+  font-weight: 500;
   text-transform: uppercase;
   color: #000;
 }
 .uppercase {
   text-transform: uppercase;
 }
+nav {
+  padding-top: 0px;
+  padding-bottom: 53px;
+}
+nav ul {
+  padding-top: 25px;
+}
+nav li:last-child {
+  padding-right: 0;
+}
+
 nav a {
   font-size: 14px;
   line-height: 30px;
@@ -85,23 +97,43 @@ nav a:active {
 }
 .main {
   background: #eeeeee;
-  min-height: 435px;
+  padding: 30px 0;
 }
-
+main {
+  padding-top: 80px;
+}
 h2 {
   font-size: 36px;
   line-height: 36px;
   color: #000;
   font-weight: normal;
 }
+.studio p{
+  margin-bottom: 42px;
+  margin-top: 22px;
+}
+.studio h3 {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #283136;
+}
 .studio li::before {
   display: inline-block;
   margin-bottom: 5px;
   margin-right: 10px;
   content: "";
-  width: 20px;
+  width: 25px;
   height: 2px;
   background: #fb565a;
+}
+.studio li {
+  display: block;
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 22px;
+  margin-top: 22px;
 }
 .left-column {
   float: left;
@@ -133,7 +165,7 @@ h2 {
   line-height: 62px;
   vertical-align: middle;
   margin-right: 15px;
-  margin-top: 60px;
+  margin-top: 0;
   padding: 0;
   width: 62px;
   height: 62px;
@@ -185,11 +217,23 @@ li {
 }
 
 ul {
-  margin: 0;
+  margin-top: 0px;
+  margin-bottom: 0;
   padding: 0;
 }
 .offers li {
   margin-right: 75px;
+}
+.offers li:last-child {
+  margin-right: 0;
+}
+.offers b {
+  margin-top: 31px;
+  margin-bottom: 0;
+}
+.offers p {
+  margin-top: 22px;
+  margin-bottom: 28px;
 }
 
 .clients ul {
@@ -202,8 +246,8 @@ ul {
   margin-right: 130px;
   
 }
-li:last-child {
-  margin-right: 0;
+.clients li:last-child {
+  margin-right:  0;
 }
 .clients .glukhanko:hover {
   background: url("../img/glukhanko-hover.png") no-repeat;
@@ -227,16 +271,9 @@ li:last-child {
   margin: 0 auto;
 }
 form {
-  width: 300px;
+  
 }
-input[type="text"] {
-  width: 78px;
-  height: 35px;
-  line-height: 35px;
-  text-align: center;
-  background-color: #f1f1f1;
-  border: none;
-}
+
 .clearfix::after {
   content: "";
   display: table;
@@ -276,7 +313,7 @@ input[type="text"] {
 
 .slider-controls {
   position: absolute;
-  bottom: 90px;
+  bottom: 65px;
   left: 50%;
   z-index: 10;
 
@@ -376,15 +413,17 @@ input[type="text"] {
   min-height: 416px;
   width: 1199px;
   margin: 0 auto;
-  margin-top: 100px;
-}
-
-.offers {
   margin-top: 80px;
 }
 
+.offers {
+  border-bottom: 2px solid #eeeeee;
+  padding-top: 0;
+  padding-bottom: 75px;
+}
+
 .studio {
-  margin-top: 140px;
+  margin-top: 40px;
 }
 
 p {
@@ -394,15 +433,19 @@ p {
 }
 
 .center {
-  text-align: center;
+  margin-left: 50px;
 }
 
 .down {
-  margin-top: 80px;
+  margin-top: 100px;
 }
 
 .clients {
-  margin-top: 100px;
+  border-top: 2px solid #eeeeee;
+  border-bottom: 2px solid #eeeeee;
+  padding-top: 45px;
+  padding-bottom: 35px;
+  margin-top: 48px;
 }
 
 .marker {
@@ -417,48 +460,48 @@ p {
 
 nav li {
   display: inline-block;
-  margin-top: 55px;
-  margin-right: 40px;
+  margin-top: 0px;
+  margin-right: 0px;
+  padding-right: 57px;
 }
 nav li:nth-child(4) {
-  margin-right: 65px;
+  margin-right: 12px;
 }
 
 .logo {
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 h1 {
-  margin-top: 65px;
+  margin-top: 20px;
   font-size: 40px;
   text-align: center;
   line-height: normal;
 }
 
-.items {
-  width: 560px;
-}
 
-.items li {
-  display: inline-block;
-  margin-right: 76px;
-  margin-bottom: 110px;
-}
-.items li:nth-child(2n) {
-  margin-right: 0px;
-}
 
-form input[type="radio"],
-form input[type="checkbox"] {
-  display: block;
-}
+
 
 .catalog {
   background: #eeeeee;
   min-height: 328px;
+  padding: 30px 0;
+}
+.contact p {
+  color: #666666;
+}
+.contact b {
+  font-weight: 500;
+  font-size: 16px;
 }
 footer {
-  min-height: 216px;
+  padding-top: 78px;
+  padding-bottom: 77px;
+}
+footer p {
+  margin: 0;
+  margin-top: 5px;
 }
 .social {
   
@@ -469,22 +512,24 @@ footer {
   
 }
 footer h2 {
-  margin-top: 55px;
+  margin-top: 0;
   margin-bottom: 0;
+}
+footer span {
+  font-size: 23px;
 }
 
 /* модальное окно */
 .modal {
   display: none;
+  position: fixed;
+  left: 630px;
+  top: 210px;
   width: 630px;
   max-width: 100%;
   height: 420px;
   max-height: 100%;
-  position: fixed;
   z-index: 100;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   background: #fff;
   box-shadow: 0 20px 50px 0 black;
   box-shadow: 
@@ -501,14 +546,19 @@ footer h2 {
 }
 .modal input[type="text"] {
   margin: 0;
-  width: 215px;
-  height: 35px;
+  text-align: left;
+  padding: 0;
+  padding-left: 15px;
+  width: 200px;
   border: 2px solid #d7dcde;
   border-radius: 2px;
   background: none;
   font-size: 12px;
   line-height: 16px;
   text-transform: uppercase;
+}
+.modal input[type="submit"] {
+  border: none;
 }
 .modal input[type="text"]:hover {
   border-color: #a2a9ac;
@@ -558,40 +608,15 @@ footer h2 {
   padding: 0;
   display:block;
   position: absolute;
-  right: 5px;
-  top: 0px;
+  right: 6px;
+  top: 6px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #fb565a;
-  box-shadow: 0 0 0 0 #000;
+  background: #fb565a url(../img/cross.svg) no-repeat 50% 50%;
   cursor: pointer;
 }
-.modal-close::before {
-  content: "";
-  position: absolute;
-  top: 18px;
-  left: 7px;
-  display: block;
-  width: 25px;
-  height: 4px;
-  background: #fff;
-  text-align: center;
-  transform: rotate(45deg);
-}
-.modal-close::after {
-  content: "";
-  position: absolute;
-  top: 18px;
-  left: 7px;
-  display: block;
-  width: 25px;
-  height: 4px;
-  background: #fff;
-  text-align: center;
-  
-  transform: rotate(-45deg);
-}
+
 .modal-overlay {
   display: none;
   position: fixed;
@@ -602,18 +627,369 @@ footer h2 {
   z-index: 50;
   background: rgba(0, 0, 0, 0.5)
 }
-#open:checked ~ .modal {
+.modal-show {
   display: block;
+  animation: effect1 1s;
 }
-#close:cheked ~ .modal {
+@keyframes effect1 {
+  0% {
+    transform: scale(0);
+    
+  }
+  60% {
+    transform: scale(1.1);
+    
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translateX(-10px);
+  }
+  20%, 40%, 60%, 80% {
+    transform: translateX(10px);
+  }
+}
+.modal-error {
+  animation: shake 0.6s;
+}
+
+/* catalog.html */
+.filter {
+  width: 240px;
+}
+.filter .num-range {
+  display: inline-block;
+}
+.filter label {
+  display: block;
+  margin-right: 8px;
+  color: #283136;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.filter input[type="text"] {
+  width: 78px;
+  height: 35px;
+  margin-left: 10px;
+  margin-right: 0px;
+  line-height: 35px;
+  text-align: center;
+  background-color: #f1f1f1;
+  border: none;
+}
+.filter .last-num {
+  margin-right: 0px;
+  margin-bottom: 53px;
+}
+.filter .num-range {
+  font-size: 16px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #283136;
+}
+.filter input[type="radio"] {
   display: none;
 }
-#open:checked ~ .modal-overlay {
-  display: block;
+.filter .radio{
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 26px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #283136;
 }
-#close:cheked ~ .modal-overlay {
+.filter .radio::before  {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: -4px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  border: 8px solid #fff;
+  box-shadow: 0 0 0 3px #c1c1c1;
+          
+}
+.filter input[type="radio"]:checked + .radio::before {
+  content: "";
+  background: #c1c1c1;
+}
+.filter input[type="radio"]:checked + .radio:hover::before {
+  content: "";
+  background: #000;
+  box-shadow: 0 0 0 3px #000;
+}
+.filter input[type="radio"] + .radio:hover::before {
+  content: "";
+  box-shadow: 0 0 0 3px #000;
+}
+.filter .radio:hover {
+  color: #000;
+  
+}
+
+
+.filter input[type="checkbox"] {
   display: none;
 }
-input[name="modal"] {
-  display:none;
+.filter .checkbox{
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 26px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #283136;
+}
+.filter .checkbox::before  {
+  content: "\2610";
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  color: #c1c1c1;
+  font-size: 34px;
+}
+.filter input[type="checkbox"]:checked + .checkbox::before {
+  content: "\2611";
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  color: #c1c1c1;
+  font-size: 34px;
+}
+.filter input[type="checkbox"]:checked + .checkbox:hover::before {
+  content: "\2611";
+  color: #000;
+}
+.filter input[type="checkbox"] + .checkbox:hover::before {
+  content: "\2610";
+  color: #000;
+}
+.filter .checkbox:hover {
+  color: #000;
+  
+}
+.filter-btn {
+  display: inline-block;
+  padding: 14px 46px;
+  margin-top: 31px;
+  background: #f1f1f1;
+  border-radius: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 18px;
+  color: #000;
+}
+.filter-btn:hover {
+  background: #e5e5e5;
+}
+.filter-btn:active {
+  padding: 13px 46px;
+  background: #d5d5d5;
+  border-top: 2px solid #b5b5b5;
+}
+.sort b {
+  margin-right: 40px;
+  display: inline;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 500;
+}
+.sort a {
+  margin-right: 46px;
+  font-size: 12px;
+  line-height: 18px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #cecece;
+  border-bottom: 1px dashed #00ca74;
+}
+.items {
+  display: block;
+  width: 560px;
+  margin: 0;
+  list-style: none;
+}
+
+.items li {
+  position: relative;
+  display: inline-block;
+  margin-right: 76px;
+  margin-bottom: 80px;
+}
+.items li:nth-child(2n) {
+  margin-right: 0px;
+}
+.sort {
+  margin-bottom: 23px;
+}
+.sort a:nth-child(4) {
+  margin-right: 75px;
+}
+.sort a:nth-child(5) {
+  margin-right: -20px;
+}
+.sort a:last-child {
+  margin-right: 0;
+}
+.sort .up {
+  font-size: 23px;
+  color: #00ca74;
+  border-bottom: none;
+}
+.sort .down {
+  font-size: 23px;
+  border-bottom: none;
+}
+
+.price {
+  display: none;
+  position: absolute;
+  top: 50px;
+  left: 20px;
+  z-index: 100;
+  width: 160px;
+  background: #fff;
+  padding: 30px 20px;
+}
+.price .btn {
+  width: 140px;
+  margin: 0 auto;
+}
+.price b {
+  margin-bottom: 0;
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: 500;
+  text-align: center;
+}
+.price p {
+  margin-top: 20px;
+  margin-bottom: 33px;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #283136;
+  text-align: center;
+  
+}
+.price .modern {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.price .aviator {
+  margin-top: 3px;
+  margin-bottom: 47px;
+}
+.items .head {
+  width: 240px;
+  height: 30px;
+  background: #f1f1f1 url("../img/browser.svg") no-repeat;
+}
+.items li:hover > .price {
+  display: block;
+}
+.items li:hover > .head {
+  background: url("../img/browser.png") no-repeat;
+}
+
+.page-num a {
+  display: inline-block;
+  padding: 12px 14px;
+  color: #000;
+  font-size: 12px;
+  line-height: 12px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background: #f1f1f1;
+  border-radius: 2px;
+  margin-right: 10px;
+}
+.page-num .chk {
+  background: #fff;
+  border: 2px solid #f1f1f1;
+  padding: 10px 12px;
+}
+.page-num .next {
+  padding: 12px 32px;
+}
+.page-num a:not(.chk):hover {
+  background: #e5e5e5;
+}
+.page-num a:not(.next):not(.chk):active {
+  background: #d5d5d5;
+  border-top: 2px solid #b5b5b5;
+  padding: 10px 14px;
+}
+
+.page-num .next:active {
+  background: #d5d5d5;
+  border-top: 2px solid #b5b5b5;
+  padding: 10px 32px;
+}
+.range {
+  position: relative;
+  width: 240px;
+  height: 80px;
+  margin-bottom: 14px;
+  background: #eeeeee;
+}
+.circle1 {
+  position: absolute;
+  left: 20px;
+  top: 30px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #fff;
+  box-shadow:  0 2px 2px 0 #cfcfcf;
+}
+.circle2 {
+  position: absolute;
+  top: 30px;
+  right: 60px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #fff;
+  box-shadow:  0 2px 2px 0 #cfcfcf;
+}
+.circle1::before, .circle2::before {
+  content: "";
+  position: absolute;
+  left: 8px;
+  top: 8px;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background: #ababab;
+}
+.circle1::after {
+  content: "";
+  position: absolute;
+  top: 9px;
+  left: 20px;
+  width: 120px;
+  height: 2px;
+  background: #00ca74;
+}
+.circle2::after {
+  content: "";
+  position: absolute;
+  top: 9px;
+  left: 20px;
+  width: 40px;
+  height: 2px;
+  background: #d7dcde;
+}
+.filter b {
+  margin-bottom: 17px;
 }
