--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ form {
 
 
 .contact {
-  background: url(../img/map.png) no-repeat center;
+  background: url(../img/map.jpg) no-repeat center;
   min-height: 416px;
   margin: 0 auto;
   margin-top: 80px;
@@ -756,15 +756,15 @@ footer span {
 }
 .filter input[type="radio"]:checked + .radio:hover::before {
   content: "";
-  background: #000;
-  box-shadow: 0 0 0 3px #000;
+  background: #b5b5b5;
+  box-shadow: 0 0 0 3px #b5b5b5;
 }
 .filter input[type="radio"] + .radio:hover::before {
   content: "";
-  box-shadow: 0 0 0 3px #000;
+  box-shadow: 0 0 0 3px #b5b5b5;
 }
 .filter .radio:hover {
-  color: #000;
+  color: #b5b5b5;
   
 }
 
